forecast subsystem dev started

--- a/index.html
+++ b/index.html
@@ -371,7 +371,218 @@
                     <div class="uc_emo">Прогнозируемая</div>
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-
+                            <div class="forecast_container">
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                                <div class="forecast_item">
+                                    <div class="f_item_header"></div>
+                                    <div class="f_item_icon"></div>
+                                    <div class="f_item_temperature">25.2 &deg;C</div>
+                                    <div class="f_item_desc_val">пасмурно</div>
+                                    <div class="row">
+                                        <div class="f_item_left">
+                                            <div class="f_item_humidity_i"></div>
+                                            <div class="f_item_wind_i"></div>
+                                            <div class="f_item_winddir_i"></div>
+                                            <div class="f_item_baro_i"></div>
+                                        </div>
+                                        <div class="f_item_right">
+                                            <div class="f_item_humidity_val">30%</div>
+                                            <div class="f_item_wind_val">3.4 м/с</div>
+                                            <div class="f_item_winddir_val">ССВ</div>
+                                            <div class="f_item_baro_val">760 мм</div>
+                                        </div>
+                                    </div>
+                                    <div><div class="f_item_timestamp_val">нет данных</div></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
