--- a/index.html
+++ b/index.html
@@ -367,6 +367,16 @@
                             <span class="wc_wind_dir_val wc_t_big">{wind.dir}</span>
                         </div>
                     </div>
+                    <div class="mydevider"></div>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                            <div class="wc_clouds" style="display: inline-block;"></div>
+                            <span class="wc_clouds_val wc_t_big">{clouds}</span>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                            <div class="wc_wind_dir" style="display: inline-block;"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="uc_col col-lg-8 col-md-8 col-sm-8 col-xs-12 text-center">
@@ -376,6 +386,9 @@
                             <div class="forecast_container">
 
                             </div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                            <div class="forecast_trend"></div>
                         </div>
                     </div>
                 </div>
