--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="/js/color_led.js"></script>
     <script src="/js/trends.js"></script>
     <script src="/js/lightbox.js"></script>
+    <script src="/js/private.js"></script>
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/fancybox/jquery.fancybox.js"></script>
 
@@ -319,11 +320,14 @@
                 <div class="uc_col col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
                     <div class="uc_card">Текущая</div>
                     <button class="btn btn-danger btn_clswc"><i class="fa fa-close"></i>Закрыть</button>
-                    <button class="btn btn-default active btn_f_item_more"><i class="fa fa-th-list"></i></button>
+                    <button class="btn btn-default active btn_f_item_more" data-tooltip="Прогноз подробнее"><i class="fa fa-th-list"></i></button>
+                    <button class="btn btn-default btn_f_wind disabled" data-tooltip="Сводка по ветру"><i class="fa fa-pie-chart"></i></button>
+                    <button class="btn btn-default btn_f_metar disabled" data-tooltip="METAR сводка"><i class="fa fa-plane"></i></button>
                     <div class="wc_weather_icon">
                         <div class="wc_main_temp">{main.temp}</div>
                     </div>
-                    <div class="wc_weather_desc">{WeatherDESC}</div>										<div class="wc_upd"></div>
+                    <div class="wc_weather_desc">{WeatherDESC}</div>
+                    <div class="wc_upd"></div>
                     <div class="wc_weather_dng"><span class="label label-danger">{danger}</span></div>
                     <!--div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
@@ -378,6 +382,12 @@
                             <div class="wc_wind_dir" style="display: inline-block;"></div>
                         </div>
                     </div>
+                    <div class="mydevider"></div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                            <div class="wind_rose_trend"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="uc_col col-lg-8 col-md-8 col-sm-8 col-xs-12 text-center">
@@ -390,6 +400,9 @@
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                             <div class="forecast_trend"></div>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                            <div class="wind_trend"></div>
                         </div>
                     </div>
                 </div>
