--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     <div class="uc_card">Текущая</div>
                     <button class="btn btn-danger btn_clswc"><i class="fa fa-close"></i>Закрыть</button>
                     <button class="btn btn-default active btn_f_item_more" data-tooltip="Прогноз подробнее"><i class="fa fa-th-list"></i></button>
-                    <button class="btn btn-default btn_f_wind disabled" data-tooltip="Сводка по ветру"><i class="fa fa-pie-chart"></i></button>
+                    <button class="btn btn-default btn_f_wind" data-tooltip="Сводка по ветру"><i class="fa fa-pie-chart"></i></button>
                     <button class="btn btn-default btn_f_metar disabled" data-tooltip="METAR сводка"><i class="fa fa-plane"></i></button>
                     <div class="wc_weather_icon">
                         <div class="wc_main_temp">{main.temp}</div>
